# ezweld

./: README.md  main.py  pyproject.toml  requirements.txt  test.py  validation_examples.py
ezweld/: __init__.py  weldgroup.py
