[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "ezweld"
version = "0.1.0"
authors = [
  { name="wcfrobert", email="temprobertdev@gmail.com" },
]
description = "ezweld - weld stress calculations in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wcfrobert/ezweld"
"Bug Tracker" = "https://github.com/wcfrobert/ezweld/issues"